<resources>
    <string name="app_name">HZTBApplication</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="string_howzBuddy_overview">HowZThisBuddy is a platform to provide peer &amp; friends feedback on a suitability of product in real time. By entering into this site you allow the product vendor to send mobile promotions in future</string>
    <string name="string_registration_overview">HowZThisBuddy will send an sms message to verify your phone number. Enter your country code and phone number: </string>
    <string name="string_phoneNumber">Phone No</string>
    <string name="string_registration_content_otp">(Country code followed by phone number)</string>
    <string name="string_registration_vertification_content">Carrier SMS charges may apply</string>
    <string name="string_submit">Submit</string>
    <string name="string_content_phone">Please confirm your country code and enter your phone number</string>
    <string name="string_confirmRegistration">Verify</string>
    <string name="string_enter_your_otp_code">Enter your verification code</string>
    <string name="string_registration_button_verify">VERIFY</string>
    <string name="string_registration_timer_warning">If you do not receive your access code within 60 seconds, Press Send Again</string>
    <string name="string_confirm_Registration_warning">Phone Number Verification  \n is  this  your  Correct  number ?</string>
    <string name="confirm_sendagain">Send OTP Again</string>
    <string name="hello_world">Hello world!</string>
    <string name="actionbar_title">Title</string>
    <string name="string_plus">+</string>
    <string name="shared_pref_app">HZTB</string>
    <string name="country_search_hint">Search... </string>
    <string name="country_choose">Choose a country</string>

    <string name="verify_phone_number">We will be verifying the phone number:</string>
    <string name="verify_ok_or_not">Is this OK, or would you like to edit the number ?</string>

    <string name="verify_edit">Edit</string>
    <string name="verify_ok">Ok</string>

    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_mobile_phone_registration">Verify your phone number</string>
    <string name="title_activity_confirm_registration">ConfirmRegistration</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="profile_title">Profile</string>
    <string name="signUp_name">Name</string>
    <string name="signUp_email">Email</string>
    <string name="signUp_phone">Phone</string>
    <string name="login_success">Success</string>
    <string name="alert_email_invalid">Please Enter Valid Email ID</string>
    <string name="alert_mobilenumber_invalid">Please Enter Valid Name</string>
    <string name="toast_userprofile_update_success">User Profile Updated Successfully</string>

    <string name="profile_camera">Camera</string>
    <string name="profile_gallery">Gallery</string>
    <string name="profile_cancel">Cancel</string>
    <string name="profile_choose_from">Choose From </string>

    <string name="signUp_or">or</string>
    <string name="signUp_facebook">Facebook</string>
    <string name="signUp_google">Google +</string>
    <string name="signUp_twitter">Twitter</string>
    <string name="signup_Done">Done</string>
    <string name="signup_Edit">Edit</string>

    <string name="gcm_defaultSenderId">24397121204</string>
    <string name="permissions_not_granted_read_phone_state">Permission Not Granted</string>
    <string name="permission_read_phone_state_rationale">Read Phone State</string>

    <string name="permission_read_gallery">Read Gallery</string>

    <string name="permission_read_contact">Read Contacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_request_opinion">RequestOpinion</string>
    <string name="capture_selfie">CAPTURE SELFIE</string>
    <string name="invite_buddy">Request Opinion</string>
    <string name="string_select_from_contacts">Select From Contacts</string>
    <string name="title_activity_contacts">Select Buddy</string>
    <string name="search_contacts">   Search contacts</string>
    <string name="group_name">Group Name</string>
    <string name="add_grouptext">Add</string>
    <string name="send_group_name">Send</string>
    <string name="view_selfie">View Selfie</string>
    <string name="details_responded">Responded</string>
    <string name="not_responded">No Responses</string>
    <string name="opinion_list">Opinions List</string>
    <string name="given">Given</string>
    <string name="pending">Pending</string>
    <string name="enter_comment">Enter your comment</string>
    <string name="write_your_comment_about_the_product">Write your comment about the product</string>
    <string name="send_your_opinion">Send Your Opinion</string>
    <string name="message_notification">Message notification</string>
    <string name="conversation_tones">Conversation tones</string>
    <string name="play_sounds_for_incoming_and_outgoing_messages">Play sounds for incoming and outgoing messages</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
</resources>
