<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegistrationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/string_howzBuddy_overview"
        android:id="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:padding="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/string_phoneNumber"
        android:id="@+id/textView3"
        android:layout_alignParentStart="true"
        android:paddingLeft="25dp"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/editText_mobilePhoneNo"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_mobilePhoneNo"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/string_registration_content_otp"
        android:id="@+id/textView4"
        android:layout_below="@+id/editText_mobilePhoneNo"
        android:layout_alignStart="@+id/editText_mobilePhoneNo"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/editText_mobilePhoneNo"
        android:gravity="center"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/string_registration_vertification_content"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:textSize="18dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_submit"
        android:id="@+id/button_submit"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="25dp"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />
</RelativeLayout>
