<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".Activities.ProfileActivity"
    android:background="@mipmap/registration_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <com.svs.hztb.CustomViews.CircularImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:id="@+id/profile_thumb"
        android:background="@android:color/transparent"
        android:layout_below="@+id/button"
        android:src="@mipmap/thumb"
        android:scaleType="fitCenter"
        android:clickable="true"
        app:civ_border="true"
        android:onClick="onProfileThumbClicked"
        android:layout_marginTop="20dp"
        app:civ_selector="true"
        app:civ_selectorColor="@android:color/holo_blue_bright"
        app:civ_selectorStrokeColor="@android:color/white"
        app:civ_selectorStrokeWidth="6dp"
        android:layout_centerHorizontal="true" />


    <com.svs.hztb.CustomViews.WalkWayTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp_name"
        android:layout_marginTop="20dp"
        android:id="@+id/textView_name"
        android:layout_below="@+id/profile_thumb"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"

        android:paddingLeft="5dp" />

    <com.svs.hztb.CustomViews.WalkWayEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_name"
        android:textSize="20sp"
        android:layout_below="@+id/textView_name"
        android:layout_marginRight="20dp"
        android:layout_alignStart="@+id/textView_name"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp" />

    <com.svs.hztb.CustomViews.WalkWayTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp_email"
        android:id="@+id/textView_email"
        android:layout_below="@+id/editText_name"
        android:layout_alignStart="@+id/editText_name"
        android:textSize="18sp"
        android:textColor="@color/light_grey"
        android:paddingLeft="5dp" />

    <com.svs.hztb.CustomViews.WalkWayEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textSize="20sp"
        android:id="@+id/editText_email"
        android:layout_below="@+id/textView_email"
        android:layout_alignStart="@+id/textView_email"
        android:textColor="@android:color/white"
        android:layout_alignEnd="@+id/editText_name"
        android:layout_marginBottom="5dp" />

    <com.svs.hztb.CustomViews.WalkWayTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signUp_phone"
        android:textSize="18sp"
        android:id="@+id/textView_phone"
        android:layout_below="@+id/editText_email"
        android:layout_alignStart="@+id/editText_email"
        android:textColor="@color/light_grey"
        android:paddingLeft="5dp" />

    <com.svs.hztb.CustomViews.WalkWayTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_mobileNumber"
        android:layout_below="@+id/textView_phone"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_alignStart="@+id/textView_phone"
        android:layout_alignEnd="@+id/editText_email"
        android:textColor="@android:color/white"

        android:enabled="false" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/separator"
            android:layout_alignStart="@+id/textView_phone"
            android:layout_alignEnd="@+id/editText_email"
            android:background="@android:color/black"
            android:layout_below="@+id/editText_mobileNumber"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator"
            android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:weightSum="2">
        <com.svs.hztb.CustomViews.WalkWayButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_Done"
            android:id="@+id/button_done"
            android:layout_marginRight="10dp"
            android:textSize="24dp"
            android:layout_alignParentLeft="true"
            android:onClick="onSignUpDoneButtonClicked"
            android:layout_below="@+id/editText_mobileNumber"
            android:textColor="@android:color/white"
            android:background="@color/picton_blue"
            />
        <com.svs.hztb.CustomViews.WalkWayButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_Edit"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:textSize="24dp"
            android:id="@+id/edittext_edit_button"
            android:textColor="@android:color/white"
            android:layout_alignBottom="@+id/button_done"
            android:background="@color/picton_blue"
            android:layout_alignParentEnd="true" />
    </LinearLayout>
    </RelativeLayout>
</ScrollView>
