<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.svs.hztb.Activities.SignUpActivity"
    android:background="@mipmap/registration_bg">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_facebook"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:onClick="onFacebookButtonClicked"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:contextClickable="true"
        android:background="@mipmap/facebook_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_twitter"
        android:layout_below="@+id/button_google"
        android:layout_alignStart="@+id/button_google"
        android:layout_alignEnd="@+id/button_google"
        android:onClick="onGooglePlusButtonClicked"
        android:layout_marginBottom="10dp"
        android:background="@mipmap/twitterbutton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_google"
        android:layout_below="@+id/button_facebook"
        android:layout_alignStart="@+id/button_facebook"
        android:layout_alignEnd="@+id/button_facebook"
        android:onClick="onTwitterButtonClicked"
        android:layout_marginBottom="10dp"
        android:background="@mipmap/google_button" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/or_image"
        android:id="@+id/textView"
        android:layout_alignEnd="@+id/button_twitter"
        android:layout_below="@+id/button_twitter"
        android:layout_alignStart="@+id/button_twitter"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:textSize="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp_name"
        android:id="@+id/textView_name"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:textSize="14dp"
        android:paddingLeft="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_name"
        android:layout_below="@+id/textView_name"
        android:layout_alignStart="@+id/textView_name"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp_email"
        android:id="@+id/textView_email"
        android:layout_below="@+id/editText_name"
        android:layout_alignStart="@+id/editText_name"
        android:textSize="14dp"
        android:paddingLeft="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_email"
        android:layout_below="@+id/textView_email"
        android:layout_alignStart="@+id/textView_email"
        android:layout_alignEnd="@+id/editText_name"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signUp_phone"
        android:id="@+id/textView_phone"
        android:layout_below="@+id/editText_email"
        android:layout_alignStart="@+id/editText_email"
        android:paddingLeft="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_mobileNumber"
        android:layout_below="@+id/textView_phone"
        android:layout_alignStart="@+id/textView_phone"
        android:layout_alignEnd="@+id/editText_email"
        android:layout_marginBottom="10dp"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_Done"
        android:id="@+id/button_done"
        android:onClick="onSignUpDoneButtonClicked"
        android:layout_below="@+id/editText_mobileNumber"
        android:layout_alignEnd="@+id/editText_mobileNumber"
        android:layout_alignStart="@+id/editText_mobileNumber"
        android:background="@color/picton_blue"
        android:textColor="#ffffff" />
</RelativeLayout>
